<resources>
    <string name="app_name">StarBucksAPK</string>
    <string name="title_home">Inicio</string>
    <string name="title_escanear">Escanear</string>
    <string name="title_menu">Menú</string>
    <string name="title_beneficios">Beneficios</string>
    <string name="title_ajustes">Ajustes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>